@@ -1,5 +1,8 @@
 Revision history for Perl extension Wx.
 
+0,9904 TBR
+    - Implemented TextCtrlIface for RichTextCtrl in >= 2.9.2
+
 0.9903 Wed Nov 09 08:00:00 BST 2011
     - Remove force of static binding for mingw libgcc & libstdc++
 0.9902 Thu Oct 13 08:00:00 BST 2011
